--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
     "vue": "^3.5.12"
   },
   "devDependencies": {
